set up basis for consistent spacing

--- a/style.css
+++ b/style.css
@@ -59,11 +59,10 @@ section.visible {
 
 .sub-section { /*for every sub section within section, used for spacing and alignment purposes 
                 DON'T USE FOR THE LAST SUB-SECTION FOR THE SECTION TO AVOID EXTRA MARGIN (we want only 6rem)*/
-  margin-bottom: 4rem;
+  margin-bottom: 6rem;
 }
 
 .highlight-area { /*area where the background is light grey and covers the entire width */
-  margin-top: 2rem;
   margin-left: -50%;
   margin-right: -50%;
   padding-left: 50%;
@@ -84,6 +83,18 @@ section.visible {
   gap: 3rem;
 }
 
+.vertical-stack{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.paragraph-with-break {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .numbered-title-section{
   display: grid;
   grid-template-columns: auto 1fr;
@@ -95,19 +106,23 @@ section.visible {
     margin-top: 7rem;
   }
   .sub-section {
-    margin-bottom: 3rem;
+    margin-bottom: 5rem;
   }
   section {
     margin-bottom: 6rem;
     margin-left: 5%;
     margin-right: 5%;
   }
+ .vertical-stack{
+    gap: 1.5rem;
+  }
   #footer-content {
     margin-left: 5%;
     margin-right: 5%;
   }
   .flex-area {
-    display: block; 
+    flex-direction: column;
+    gap: 1.5rem;
   }
   .grid-area{
     grid-template-columns: 1fr;
@@ -204,17 +219,19 @@ p, label, li{
 }
 
 /* paragraph breaks */
+/*
 p + p {
   margin-top: 1rem;
 }
-
+*/
 li + li {
   margin-top: 0.25rem;
 }
-
+/*
 p + div, div + p{
   margin-top: 1rem;
 }
+  */
 
 strong{
   color: #C22022;
@@ -275,7 +292,7 @@ em {
 @media only screen and (max-width: 768px) {
   h1 {
     font-size: 22px;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
   }
   h2 {
     font-size: 16px;
@@ -637,6 +654,7 @@ em {
   display: flex;
   border-bottom: 2px solid #C22022;
   align-items: end;
+  margin-bottom: 1rem;
 }
 
 .project-title p{
@@ -929,15 +947,8 @@ em {
   gap: 1rem;
 }
 
-#rabbitats-design-iterations-images { /*center all the images for the design iterations section */
-  margin-left: auto;
-  margin-right: auto;
-  width: fit-content;
-  text-align: center;
-}
-
-#rabbitats-design-iterations-images figcaption {
-  text-align: left;
+#rabbitats-design-iterations{
+  align-items: center;
 }
 
 /* ----------------------- PROJECT PAGE - MACARON SPECIFIC ---------------------------*/
@@ -998,12 +1009,6 @@ em {
   text-align: center;
 }
 
-#craftconnect-journey-maps {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
 #craftconnect-journey-map-market {
   width: 90%;
   margin-left: auto;
@@ -1034,6 +1039,13 @@ em {
 
 #closetshare-target-audience {
   text-align: center;
+}
+
+#closetshare-stylings-content{
+  order: 1;
+}
+#closetshare-stylings-image{
+  order: 2;
 }
 
 #closetshare-my-contribution {
@@ -1163,7 +1175,7 @@ em {
 }
 
 #wealthsimple-first-solution-images {
-  width: 80%;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -1171,13 +1183,13 @@ em {
 #wealthsimple-second-solution-images, #wealthsimple-third-solution-images {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
-  width: 80%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
 }
 
 #wealthsimple-fourth-solution-images {
-  width: 80%;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -1215,15 +1227,15 @@ em {
   #wealthsimple-third-solution-images {
     display: grid;
     grid-template-columns: 1fr !important;
-    gap: 1rem;
+    gap: 1.5rem;
   }
 
   #macaron-second-role-top {
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
   }
 
   .closetshare-breakdown-element {
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
   }
 
   #closetshare-breakdown-list .closetshare-breakdown-element:nth-child(2),
@@ -1251,7 +1263,7 @@ em {
   }
 
   #macaron-share-prototype, #craftconnect-share-prototype{
-    gap: 1rem;
+    gap: 1.5srem;
   }
   #macaron-first-role{
     display: flex;
@@ -1512,6 +1524,8 @@ img {
 
 #rabbitats-wireframe-container{
   width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
@@ -1560,6 +1574,10 @@ img {
   border-radius: 0.5rem;
   display: inline-block; 
   text-align: center; 
+}
+
+#macaron-mascot {
+  width: 50%;
 }
 
 #macaron-first-feature-video, #macaron-second-feature-video, #macaron-second-feature-video{
