--- a/style.css
+++ b/style.css
@@ -660,17 +660,21 @@ em {
 .project-title p{
   margin-left: auto;
   margin-bottom: 0;
-  width: 10%;
 }
 
 @media only screen and (max-width: 768px) {
   .project {
     grid-template-columns: 1fr;
     gap: 0.5rem;
+    border: 1px solid #222222;
   }
 
   .project img {
     margin-bottom: 0;
+  }
+
+  .project-title {
+    border-bottom: 1px solid #C22022;
   }
 
   .project-right {
@@ -717,6 +721,7 @@ em {
   position: relative;
   z-index: 0;
   margin-bottom: 1rem;
+  padding-bottom: 0.1rem;
 }
 
 #footer-content h2::after {
@@ -724,7 +729,7 @@ em {
   position: absolute;
   bottom: 0;
   left: 0;
-  height: 1rem;
+  height: 2px;
   width: 100%;
   background: #C22022;
   z-index: -1;
@@ -1485,6 +1490,10 @@ img {
   .project-select-icon {
     width: 1.5rem;
     height: 1.5rem;
+  }
+  .project-image {
+    border-bottom-left-radius: 0rem;
+    border-top-right-radius: 0.25rem;
   }
 }
 
