--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ h2 {
   letter-spacing: 0.3px;
   line-height: 1.2;
   margin-top: 0;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 h3 {
@@ -208,14 +208,14 @@ ul {
   width: 120%;
 }
 
-p, label, li{
+p, label, li {
   font-size: 16px;
   font-weight: 400;
-  letter-spacing: -0.2px;
-  line-height: 1.4;
+  letter-spacing: -0.1px;
+  line-height: 1.5;
   margin-top: 0;
   margin-bottom: 0;
-  font-family: 'Quicksand';
+  font-family: 'Lato', sans-serif;
 }
 
 /* paragraph breaks */
@@ -245,7 +245,7 @@ figcaption{
   font-size: 14px;
   letter-spacing: -0.1px;
   line-height: 1.4;
-  font-family: 'Quicksand';
+  font-family: 'Lato', sans-serif;
 }
 
 a {
@@ -296,7 +296,7 @@ em {
   }
   h2 {
     font-size: 16px;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0.5rem;
   }
   h3 {
     font-size: 11px;
@@ -642,6 +642,7 @@ em {
   margin-right: auto;
   padding: 0.5rem 0.8rem;
   border-radius: 1rem;
+  letter-spacing: 0.08em;
   background-color: #383838;
   color: #FFFFFF;
 }
@@ -654,7 +655,7 @@ em {
   display: flex;
   border-bottom: 2px solid #C22022;
   align-items: end;
-  margin-bottom: 1rem;
+  margin-bottom: 0.8rem;
 }
 
 .project-title p{
@@ -675,6 +676,7 @@ em {
 
   .project-title {
     border-bottom: 1px solid #C22022;
+    margin-bottom: 0;
   }
 
   .project-right {
