--- a/style.css
+++ b/style.css
@@ -211,11 +211,11 @@ ul {
 p, label, li {
   font-size: 16px;
   font-weight: 400;
-  letter-spacing: -0.1px;
-  line-height: 1.5;
+  letter-spacing: -0.2px;
+  line-height: 1.4;
   margin-top: 0;
   margin-bottom: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 /* paragraph breaks */
@@ -243,9 +243,9 @@ figcaption{
   margin-left: 0.4rem;
   padding: 0;
   font-size: 14px;
-  letter-spacing: -0.1px;
+  letter-spacing: -0.2px;
   line-height: 1.4;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 a {
