--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*fonts
 1. h1: Montserrat
 2. h2 + h3: Dosis
-3. body text: Quicksand
+3. body text: Open Sans
 4. buttons + nav: dosis
 */
 
@@ -16,7 +16,7 @@ body, html {
 /* ----------------------- PAGE and SECTION Related ---------------------------*/
 body{
   background-color: #222222;
-  color: #CECECE;
+  color: #DADADA;
   font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
   padding: 0;
@@ -209,13 +209,13 @@ ul {
 }
 
 p, label, li {
-  font-size: 16px;
-  font-weight: 400;
-  letter-spacing: -0.2px;
-  line-height: 1.4;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: -0.05px;
+  line-height: 1.5;
   margin-top: 0;
   margin-bottom: 0;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* paragraph breaks */
@@ -242,10 +242,11 @@ figcaption{
   color: #B6B6B6;
   margin-left: 0.4rem;
   padding: 0;
-  font-size: 14px;
-  letter-spacing: -0.2px;
+  font-size: 12px;
+  font-weight: 300;
+  letter-spacing: -0.1px;
   line-height: 1.4;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 a {
@@ -302,10 +303,10 @@ em {
     font-size: 11px;
   }
   p, label, li{
-    font-size: 12px;
+    font-size: 10px;
   }
   figcaption {
-    font-size: 10px;
+    font-size: 8px;
   }
   .button {
     font-size: 12px;
@@ -358,6 +359,7 @@ em {
   top: 0; /* same as last line */
   width: 100%;
   z-index: 1;
+  border-bottom: 1px solid #2C2C2C;
 }
 #navigation {
   overflow: hidden;
