--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ footer {
   margin-top: 5rem;
   padding-top: 1rem;
   padding-bottom:1rem;
+  border-top: 1px solid #2C2C2C;
 }
 
 #footer-content {
@@ -379,6 +380,7 @@ em {
 #logo a {
   text-decoration: none;
   color: inherit;
+  transition: color 0.3s ease;
 }
 
 .navigation-items {
@@ -400,7 +402,7 @@ em {
   transition: color 0.3s ease;
 }
 
-.navigation-items a:hover, .navigation-items a:focus {
+.navigation-items a:hover, .navigation-items a:focus, #logo a:hover, #logo a:focus {
   color: #C22022;
   cursor: pointer;
 }
