--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body, html {
 /* ----------------------- PAGE and SECTION Related ---------------------------*/
 body{
   background-color: #222222;
-  color: #DADADA;
+  color: #F1F1F1;
   font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
   padding: 0;
@@ -71,6 +71,7 @@ section.visible {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   background-color: #2C2C2C;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 .flex-area{ /* for the list of items within the project brief for each project page */
@@ -210,9 +211,9 @@ ul {
 }
 
 p, label, li {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 300;
-  letter-spacing: 0.01em;
+  letter-spacing: 0.02em;
   line-height: 1.55;
   margin-top: 0;
   margin-bottom: 0;
@@ -613,12 +614,13 @@ em {
   grid-template-columns: 40% 60%;
   gap: 1rem;
   margin-bottom: 2rem;
-  border: 2px solid #222222;
-  transition: border-color 0.3s ease;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
+  transition: box-shadow 0.3s ease;
 }
 
 
 .project:hover{
+  box-shadow: 0 0 0 2px #DD1216, 0 2px 8px rgba(0, 0, 0, 0.2);
   border-color: #DD1216;
 }
 
@@ -800,19 +802,20 @@ em {
 
 .about-goal {
   display: flex;
+  align-items: center; 
 }
 
-.about-goal-links h3 {
+.about-goal-links p {
   display: inline-block;
   box-shadow: inset 0 -1px 0 transparent;
   transition: box-shadow 0.3s ease;
 }
 
-.about-goal-links:hover h3 {
+.about-goal-links:hover p{
   box-shadow: inset 0 -1px 0 #DD1216;
 }
 
-.about-goal h3 {
+.about-goal p {
   margin-bottom: 0;
   text-transform: none;
 }
@@ -823,8 +826,8 @@ em {
   margin-right: 0.5rem;
 }
 
-#about-meeting-you h3{
-  color: white;
+#about-meeting-you p{
+  color: #DD1216;
 }
 
 @media only screen and (max-width: 768px) {
