--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ section.visible {
 .vertical-stack{
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 3rem;
 }
 
 .paragraph-with-break {
@@ -191,7 +191,7 @@ h2 {
   letter-spacing: 0.3px;
   line-height: 1.2;
   margin-top: 0;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.8rem;
 }
 
 h3 {
@@ -370,21 +370,26 @@ em {
   background-color: #222222; 
   backdrop-filter: none;
   transition: background-color 0.3s ease, backdrop-filter 0.3s ease;
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
 }
 #navigation {
   overflow: hidden;
   display: grid;
+  align-items: center;
   grid-template-columns: 2fr 1fr 1fr;
   grid-template-areas:
   "logo . . links";
   margin-left: 10%;
   margin-right: 10%;
-  margin-top: 1rem;
 }
 
 #logo {
-  margin-bottom: 1.2rem;
-
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 0;
+  letter-spacing: 0.07rem;
+  line-height: 1;
 }
 
 #logo a {
@@ -424,6 +429,10 @@ em {
 }
 
 @media only screen and (max-width: 768px) {
+  #navigation-wrapper {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
   #navigation {
     margin-top: 0.8rem;
   }
