--- a/style.css
+++ b/style.css
@@ -370,8 +370,8 @@ em {
   background-color: #222222; 
   backdrop-filter: none;
   transition: background-color 0.3s ease, backdrop-filter 0.3s ease;
-  padding-top: 1.2rem;
-  padding-bottom: 1.2rem;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
 }
 #navigation {
   overflow: hidden;
@@ -385,17 +385,7 @@ em {
 }
 
 #logo {
-  text-transform: uppercase;
-  font-family: 'Montserrat', sans-serif;
-  margin-bottom: 0;
-  letter-spacing: 0.07rem;
-  line-height: 1;
-}
-
-#logo a {
-  text-decoration: none;
-  color: inherit;
-  transition: color 0.3s ease;
+ width: 3rem;
 }
 
 .navigation-items {
@@ -431,28 +421,10 @@ em {
 @media only screen and (max-width: 768px) {
   #navigation-wrapper {
     padding-top: 0;
-    padding-bottom: 0;
+    padding-bottom: 0.5rem;
   }
   #navigation {
     margin-top: 0.8rem;
-  }
-  #navigation {
-    margin-bottom: 1rem;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-  "logo"
-  "links";
-  }
-  #logo{ /* centre the logo when the screen width is small */
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 0.3rem;
-    font-size: 20px;
-  }
-
-  .navigation-items{
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .navigation-items a {
