--- a/style.css
+++ b/style.css
@@ -425,12 +425,19 @@ em {
   }
   #navigation {
     margin-top: 0.8rem;
+    margin-left: 5%;
+  margin-right: 5%;
   }
 
+  .navigation-items {
+    display: flex;
+    justify-content: flex-end;
+    gap: 3rem;
+  }
   .navigation-items a {
     font-size: 12px;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
