--- a/style.css
+++ b/style.css
@@ -256,9 +256,9 @@ figcaption{
   padding: 0;
   font-size: 14px;
   font-weight: 300;
-  letter-spacing: 0.01em;
-  line-height: 1.4;
-  font-family: 'Open Sans', sans-serif;
+  letter-spacing: 0.03em;
+  line-height: 1.5;
+  font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
 a {
