--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ section.visible {
 .paragraph-with-break {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.8rem;
 }
 
 .numbered-title-section{
@@ -191,12 +191,11 @@ section.visible h1::after {
 h2 {
   font-family: 'Dosis', serif;
   color: #f5f5f5;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 400;
-  letter-spacing: 0.3px;
-  line-height: 1.2;
+  letter-spacing: 0.065em;
   margin-top: 0;
-  margin-bottom: 0.8rem;
+  margin-bottom: 1.2rem;
 }
 
 h3 {
@@ -276,8 +275,8 @@ em {
 }
 
 .button {
-  background-color: #2C2C2C;
-  border: 1px solid #222222;
+  background-color: #383838;
+  border: 1px solid #383838;
   border-radius: 0.5rem;
   color: white;
   padding: 0.7rem 2rem;
@@ -578,6 +577,10 @@ em {
   transform: scaleY(1);
 }
 
+#introduction-left{
+  gap: 1rem;
+}
+
 #introduction-left p{
   width: 90%;
 }
@@ -600,8 +603,7 @@ em {
 
   #introduction-right {
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+
   }
 
   #heading-digital-product-designer{
