--- a/style.css
+++ b/style.css
@@ -301,6 +301,15 @@ em {
   margin-right: 0.08em;
 }
 
+/*H1 L and A */
+.kern-LA {
+  margin-right: 0.05em;
+}
+
+.kern-AS {
+  margin-right: 0.04em;
+}
+
 @media only screen and (max-width: 768px) {
   h1 {
     font-size: 20px;
