--- a/style.css
+++ b/style.css
@@ -74,6 +74,12 @@ section.visible {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
+.highlight-area p{
+  max-width: 50em;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .flex-area{ /* for the list of items within the project brief for each project page */
   display: flex;
   justify-content: space-between;
@@ -94,7 +100,7 @@ section.visible {
 .paragraph-with-break {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 0.8rem;
 }
 
 .numbered-title-section{
@@ -194,7 +200,7 @@ h2 {
   color: #f5f5f5;
   font-size: 22px;
   font-weight: 400;
-  letter-spacing: 0.065em;
+  letter-spacing: -0.001em;
   margin-top: 0;
   margin-bottom: 1.2rem;
 }
@@ -618,9 +624,10 @@ em {
   width: 100%;
 }
 
-  #heading-digital-product-designer{
-    font-size: 42px;
-  }
+#heading-digital-product-designer h1 {
+  width: 100vw;              /* Make it 90% of viewport width */
+  font-size: 18vw;           /* Scale text to fit nicely in that width */
+}
 
   #heading-digital-product-designer::before,
 #heading-digital-product-designer::after {
