mobile landing p quick fix

--- a/style.css
+++ b/style.css
@@ -616,7 +616,9 @@ em {
   }
 
   #introduction-left p{
-    width: 100%;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
 #heading-hello-howard{
