--- a/style.css
+++ b/style.css
@@ -127,8 +127,8 @@ section.visible {
   }
   section {
     margin-bottom: 6rem;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
+    margin-left: 5%;
+    margin-right: 5%;
   }
  .vertical-stack{
     gap: 1.5rem;
@@ -323,7 +323,7 @@ em {
     margin-bottom: 1.5rem;
   }
   h2 {
-    font-size: 16px;
+    font-size: 18px;
     margin-bottom: 0.8rem;
   }
   h3 {
@@ -604,7 +604,7 @@ em {
   }
 
   #introduction h1{
-    width: 95vw;
+    width: 90vw;
   }
 
   #title-heading {
@@ -871,12 +871,11 @@ em {
   }
 
   .about-activity-tile {
-    width: 90%;
     margin-left: auto;
     margin-right: auto;
-    padding: 0.8rem;
+    padding: 0.8rem 0.5rem;
     background-color: #2C2C2C;
-    border-radius: 0.5rem;
+    border-radius: 0.25rem;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
   }
 
