--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body, html {
 
 /* ----------------------- PAGE and SECTION Related ---------------------------*/
 body{
-  background-color: #222222;
+  background-color: #1A1A1A;
   color: #F1F1F1;
   font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
@@ -23,7 +23,7 @@ body{
 }
 
 #content{
-  margin-top: 8rem;
+  margin-top: 8%;
 }
 
 #project-content{ /*a wrapper with all the page content in it */
@@ -70,8 +70,10 @@ section.visible {
   padding-right: 50%;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-  background-color: #2C2C2C;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
+  background-color: #1F1F1F;
+  box-shadow: inset 0.5px 1px 2px #292929,
+              inset -0.5px -1px 2px #111111,
+              0px 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 .highlight-area p{
@@ -293,6 +295,7 @@ em {
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
   transition: background-color 0.3s ease, border-color 0.3s ease;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2); 
 }
 
 .button:hover, .button:focus{
@@ -388,7 +391,7 @@ em {
   width: 100%;
   z-index: 1;
   border-bottom: 1px solid #2C2C2C;
-  background-color: #222222; 
+  background-color: #1A1A1A; 
   backdrop-filter: none;
   transition: background-color 0.3s ease, backdrop-filter 0.3s ease;
   padding-top: 0.8rem;
@@ -590,6 +593,7 @@ em {
 
 #introduction-left{
   gap: 2rem;
+  margin-top: 1rem;
 }
 
 #introduction-left p{
@@ -640,13 +644,15 @@ em {
 }
 /* ----------------------- HOME PAGE - PROJECT SECTION SPECIFIC ---------------------------*/
 .project {
-  background-color: #2C2C2C;
+  background-color: #1F1F1F;
   border-radius: 0.25rem;
   display: grid;
   grid-template-columns: 40% 60%;
   gap: 1rem;
   margin-bottom: 2rem;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
+  box-shadow: inset 1px 1px 2px #292929,
+              inset -1px -1px 2px #111111,
+              0px 2px 4px rgba(0, 0, 0, 0.2); 
   transition: box-shadow 0.3s ease;
 }
 
@@ -707,7 +713,6 @@ em {
   .project {
     grid-template-columns: 1fr;
     gap: 0.5rem;
-    border: 1px solid #222222;
   }
 
   .project img {
@@ -813,9 +818,11 @@ em {
   flex-direction: column;
   text-align: center;
   padding: 1rem;
-  background-color: #2C2C2C;
+  background-color: #1F1F1F;
   border-radius: 0.5rem;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
+  box-shadow: inset 0.5px 1px 2px #292929,
+              inset -0.5px -1px 2px #111111,
+              0px 2px 4px rgba(0, 0, 0, 0.2); 
 }
 .about-activity-tile figcaption {
   text-align: left;
@@ -874,9 +881,11 @@ em {
     margin-left: auto;
     margin-right: auto;
     padding: 0.8rem 0.5rem;
-    background-color: #2C2C2C;
+    background-color: #1F1F1F;
     border-radius: 0.25rem;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
+    box-shadow: inset 0.5px 1px 2px #292929,
+              inset -0.5px -1px 2px #111111,
+              0px 2px 4px rgba(0, 0, 0, 0.2); 
   }
 
   .about-activity-tile figcaption {
@@ -885,7 +894,7 @@ em {
 
   #about-lists-of-goals {
     grid-template-columns: 1fr;
-    width: 70%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
   }
@@ -955,6 +964,10 @@ em {
 
 #rabbitats-mobile-preview-images {
   grid-template-columns: 1fr 1fr 1fr;
+}
+
+#rabbitats-the-client{
+  text-align: center;
 }
 
 #rabbitats-share-prototype{
@@ -1385,18 +1398,20 @@ img {
 .image-with-frame { /*add lighter grey area around image for content */
   align-self: flex-start;
   padding: 0.5rem;
-  background-color: #2C2C2C;
+  background-color: #212121;
   border-radius: 0.25rem;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
+  box-shadow: inset 1px 1px 2px #111111,
+              inset -1px -1px 0 #292929;
 }
 
 .image-with-caption { /*add lighter grey area around image for content */
   align-self: flex-start;
   padding: 0.5rem;
-  background-color: #2C2C2C;
+  background-color: #1F1F1F;
   border-radius: 0.25rem;
   display: inline-block; 
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Drop shadow */
+  box-shadow: inset 1px 1px 2px #111111,
+              inset -1px -1px 0 #292929;
 }
 
 .image-with-caption figcaption {
@@ -1406,11 +1421,12 @@ img {
 
 .image-with-caption-horizontal { /* in cases where the caption is on the right or left side of the image */
   padding: 0.8rem;
-  background-color: #2C2C2C;
+  background-color: #1F1F1F;
   border-radius: 0.5rem;
   display: flex; 
   align-items: center; /* make text vertically aligned */
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
+  box-shadow: inset 1px 1px 2px #111111,
+              inset -1px -1px 0 #292929;
 }
 .image-with-caption-horizontal figcaption {
   margin-left: 1rem;
@@ -1506,6 +1522,7 @@ img {
 /* ----------- HOME PAGE -----------*/
 #profile-picture {
   width: 100%;
+  border-radius: 10rem;
 }
 
 .project-image {
@@ -1552,8 +1569,10 @@ img {
 
 /* ----------- RABBITATS -----------*/
 #rabbitats-logo {
-  width: 40%;
-  margin-left: 5rem;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1rem;
 }
 
 .rabbitats-web-preview-element {
