--- a/style.css
+++ b/style.css
@@ -1035,6 +1035,8 @@ em {
   justify-content: center; 
   align-items: center;
   text-align: center;
+  grid-template-columns: 1fr;
+  gap: 1rem;
 }
 
 #macaron-share-prototype h2, #craftconnect-share-prototype h2{
@@ -1105,9 +1107,8 @@ em {
   width: 70%;
 }
 
-#craftconnect-final-concept-result p{
-  margin-left: 2rem;
-  margin-right: 2rem;
+#craftconnect-final-concept-result {
+  text-align: center;
 }
 
 /* ----------------------- PROJECT PAGE - CLOSETSHARE SPECIFIC ---------------------------*/
@@ -1340,7 +1341,7 @@ em {
   }
 
   #macaron-share-prototype, #craftconnect-share-prototype{
-    gap: 1.5srem;
+    gap: 1srem;
   }
   #macaron-first-role{
     display: flex;
@@ -1539,7 +1540,7 @@ img {
 /* ----------- HOME PAGE -----------*/
 #profile-picture {
   width: 100%;
-  border-radius: 10rem;
+  border-radius: 8rem;
 }
 
 .project-image {
