--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body, html {
 
 /* ----------------------- PAGE and SECTION Related ---------------------------*/
 body{
-  background-color: #010E0E;
+  background-color: #0a0E0E;
   color: #F1F1F1;
   font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
@@ -31,7 +31,7 @@ body{
 }
 
 footer {
-  background-color: #171717;
+  background-color: #141717;
   margin-top: 5rem;
   padding-top: 1rem;
   padding-bottom:1rem;
@@ -70,7 +70,7 @@ section.visible {
   padding-right: 50%;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-  background-color: #171717;
+  background-color: #141717;
   box-shadow: inset 0.5px 1px 2px #292929,
               inset -0.5px -1px 2px #111111,
               0px 2px 4px rgba(0, 0, 0, 0.2); 
@@ -284,8 +284,8 @@ em {
 }
 
 .button {
-  background-color: #383838;
-  border: 1px solid #383838;
+  background-color: #202222;
+  border: 1px solid #202222;
   border-radius: 0.5rem;
   color: white;
   padding: 0.7rem 2rem;
@@ -391,7 +391,7 @@ em {
   width: 100%;
   z-index: 1;
   border-bottom: 1px solid #2C2C2C;
-  background-color: #171717; 
+  background-color: #141717; 
   backdrop-filter: none;
   transition: background-color 0.3s ease, backdrop-filter 0.3s ease;
   padding-top: 0.8rem;
@@ -682,7 +682,7 @@ em {
 
 /* ----------------------- HOME PAGE - PROJECT SECTION SPECIFIC ---------------------------*/
 .project {
-  background-color: #171717;
+  background-color: #141717;
   border-radius: 0.25rem;
   display: grid;
   grid-template-columns: 40% 60%;
@@ -913,7 +913,7 @@ em {
   flex-direction: column;
   text-align: center;
   padding: 1rem;
-  background-color: #171717;
+  background-color: #141717;
   border-radius: 0.5rem;
   box-shadow: inset 0.5px 1px 2px #292929,
               inset -0.5px -1px 2px #111111,
@@ -976,7 +976,7 @@ em {
     margin-left: auto;
     margin-right: auto;
     padding: 0.8rem 0.5rem;
-    background-color: #171717;
+    background-color: #141717;
     border-radius: 0.25rem;
     box-shadow: inset 0.5px 1px 2px #292929,
               inset -0.5px -1px 2px #111111,
@@ -1498,7 +1498,7 @@ img {
 .image-with-caption { /*add lighter grey area around image for content */
   align-self: flex-start;
   padding: 0.5rem;
-  background-color: #171717;
+  background-color: #141717;
   border-radius: 0.25rem;
   display: inline-block; 
   box-shadow: inset 1px 1px 2px #111111,
@@ -1512,7 +1512,7 @@ img {
 
 .image-with-caption-horizontal { /* in cases where the caption is on the right or left side of the image */
   padding: 0.8rem;
-  background-color: #171717;
+  background-color: #141717;
   border-radius: 0.5rem;
   display: flex; 
   align-items: center; /* make text vertically aligned */
