--- a/style.css
+++ b/style.css
@@ -719,14 +719,15 @@ em {
 }
 
 .project-tag{
+  display: inline-block; 
+  align-self: flex-end; 
   font-size: 12px;
-  margin-top: auto;
-  margin-right: auto;
-  padding: 0.5rem 0.8rem;
+  padding: 0.3rem 0.8rem;
   border-radius: 1rem;
   letter-spacing: 0.08em;
   background-color: #383838;
   color: #FFFFFF;
+  margin: 0;
 }
 
 .project h2 {
@@ -1194,8 +1195,58 @@ em {
   text-align: center;
 }
 
-#closetshare-target-audience {
+#closetshare-research-question {
   text-align: center;
+}
+
+#closetshare-avenue-issues {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.closetshare-avenue {
+  background-color: #141717;
+  border-radius: 0.25rem;
+  padding: 2rem;
+  box-shadow: inset 0.5px 1px 2px #292929,
+              inset -0.5px -1px 2px #111111,
+              0px 2px 4px rgba(0, 0, 0, 0.2); 
+  grid-template-columns: 1fr 2fr;
+}
+
+.closetshare-avenue .project-tag{
+  margin-bottom: 0.3rem;
+}
+
+.closetshare-avenue-left {
+  display: flex;
+  align-items: center;
+}
+
+.closetshare-avenue-issues{
+  grid-template-columns: auto 1fr;
+  gap: 1rem;
+  padding-bottom: 1rem;
+}
+
+.closetshare-avenue-issues figcaption {
+  margin-left: 0;
+}
+
+.closetshare-avenue-issues + .closetshare-avenue-issues {
+  padding-top: 1rem;
+  border-top: 1px solid #2C2C2C;
+}
+
+.closetshare-avenue-issue-left{
+  display: flex;
+  align-items: center;
+}
+
+.closetshare-avenue-issue-left img{
+  height: 2em; /* Set the image height to match the font height */
+  width: auto; /* Maintain the image's aspect ratio */
 }
 
 #closetshare-stylings-content{
@@ -1210,6 +1261,8 @@ em {
 }
 
 #closetshare-concept-ideation {
+  display: grid;
+  align-items: center;
   grid-template-columns: 1.4fr 1fr;
 }
 
@@ -1383,6 +1436,10 @@ em {
 
   #macaron-second-role-top {
     margin-bottom: 1.5rem;
+  }
+
+  .closetshare-avenue {
+    grid-template-columns: 1fr;
   }
 
   .closetshare-breakdown-element {
@@ -1782,6 +1839,12 @@ img {
   align-items: center;
 }
 
+#closetshare-forum-image, #closetshare-pininterest-image {
+  width: 60%;
+  display: block; 
+  margin: 0 auto; 
+}
+
 #closetshare-architecture-A img{
   width: 50%;
 }
@@ -1799,6 +1862,13 @@ img {
   width: 100%;
   border-radius: 17%;
 
+}
+
+@media (max-width: 768px) {
+  #closetshare-forum-image,
+  #closetshare-pininterest-image {
+    width: 40%;
+  }
 }
 
 /*----------- CRAFTCONNECT -----------*/
