typos and other minor changes

--- a/style.css
+++ b/style.css
@@ -1217,6 +1217,7 @@ em {
 
 .closetshare-avenue .project-tag{
   margin-bottom: 0.3rem;
+  background-color: #00ba00;
 }
 
 .closetshare-avenue-left {
