--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ body, html {
 /* ----------------------- PAGE and SECTION Related ---------------------------*/
 body{
   background-color: #0a0E0E;
+  background: repeating-linear-gradient(
+  -30deg,
+  #1A1F25,            /* start color (very dark red) */
+  #1A1F25 1px,        /* light gray ends at 1px */
+  transparent 1px,    /* then becomes transparent starting at 1px */
+  transparent 7px    /* transparent extends until 10px */
+),
+#0a0E0E;
   color: #F1F1F1;
   font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
