--- a/style.css
+++ b/style.css
@@ -125,6 +125,15 @@ section.visible {
 }
 
 @media only screen and (max-width: 768px) { /* for a smaller screen */
+  body {
+    background: repeating-linear-gradient(
+      -30deg,
+      rgba(21,25,30,0.6), /* semi-transparent dark */
+      rgba(21,25,30,0.6) 1px,
+      transparent 1px,
+      transparent 7px
+    ),#0a0e0e;
+  }
   #content {
     margin-top: 5rem;
   }
