--- a/style.css
+++ b/style.css
@@ -217,9 +217,9 @@ section.visible h1::after {
 h2 {
   font-family: 'Fira Code', monospace;
   color: #f5f5f5;
-  font-size: 18px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
+  font-size: 20px;
+  font-weight: 300;
+  letter-spacing: -0.03em;
   margin-top: 0;
   margin-bottom: 1.2rem;
 }
@@ -486,6 +486,17 @@ em {
   position: fixed;
   top: 0;
   width: 100%;
+}
+
+#progress-bar {
+  position: fixed;
+  left: 0;
+  top: 0; /* temporarily, JS will offset it */
+  height: 2px; /* thin bar look */
+  background-color: #DD1216; /* red */
+  width: 0%; /* start empty */
+  z-index: 10;
+  transition: width 0.1s linear; /* smooth fill */
 }
 
 @media only screen and (max-width: 768px) {
