changed landing h1 size

--- a/style.css
+++ b/style.css
@@ -680,7 +680,7 @@ em {
 }
 
 #heading-digital-product-designer h1{
-  font-size: calc(2.1rem + 3vw);
+  font-size: 5.34vw;
   letter-spacing: 0.03em;
   text-align: center;
   text-indent: -0.08em;
