--- a/style.css
+++ b/style.css
@@ -206,9 +206,9 @@ section.visible h1::after {
 h2 {
   font-family: 'Fira Code', monospace;
   color: #f5f5f5;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 300;
-  letter-spacing: -0.03em;
+  letter-spacing: -0.04em;
   margin-top: 0;
   margin-bottom: 1.2rem;
 }
@@ -237,7 +237,7 @@ p, label, li {
   font-size: 14px;
   font-weight: 300;
   letter-spacing: 0.05em;
-  line-height: 1.8;
+  line-height: 1.9;
   margin-top: 0;
   margin-bottom: 0;
   font-family: 'Plus Jakarta Sans', sans-serif;
@@ -641,6 +641,9 @@ em {
   padding: 0.6rem 1.2rem;            /* small inner spacing */
   border-radius: 0.5rem;             /* soft edges */
   margin-bottom: 0.2rem;
+  box-shadow: inset 1px 1px 2px #292929,
+              inset -1px -1px 2px #111111,
+              0px 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 #based-vancouver h3 {
